# funzzy

./: .gitignore  .travis.yaml  .travis.yml  .watch.yaml  Cargo.toml  LICENSE  Makefile  README.md  Vagrantfile  default.nix  events.yaml  flake.nix  linux-install.sh  packages.nix  setup_vagrant.sh  shell.nix  watch.yaml
.github/workflows/: on-demand-build.yml  on-push-integration-test.yml  on-push-nixbuild.yml  on-push.yml  on-release-bin.yml  on-release.yml  on-schedule-nixbuild.yml  release-matrix.yml  (+1 more)
ci/: before_deploy.sh  install.sh  script.sh  setup_env.sh
docs/: FEATURE_DYNAMIC_GLOB.md  FEATURE_DYNAMIC_GLOB_GITIGNORE.md  FLAG_FAIL_FAST.md  FLAG_LOG_FILE.md  FLAG_NON_BLOCK.md  FLAG_NO_RUN_INIT.md  FLAG_TARGET.md  SYSTEM_DESIGN_LOG_FILE.md  USAGE.md
examples/: README.md  common-rules.yml  complex-commands.yml  feat-dynamic-glob-pattern.yaml  list-of-commands-per-task.yaml  list-of-failing-commands.yml  list-of-tasks-run-on-init.yml  list-of-watches.yml  long-task.yaml  longtask.sh  lua-based-filter.yml  lua-filter.yml  multiple-tasks.yml  multiple.yml  nested-groups.yml  onchange.lua  piped.yml  reload-config-example.yml  simple-case.yml  tasks-with-absolute-paths.yml  tasks-with-filepath-template.yml  tasks-with-long-running-commands.yaml  tasks-with-tags-to-filter.yml  test-nested-groups.yml  workflow-with-dependency-between-tasks.yml
nix/: development-environment.nix  gitdiff.patch  package-from-source.nix  package-local.nix  package-nightly.nix  package.nix
scripts/: bump-nix-default  bump-nix-local  bump-nix-nightly  git-hooks-checks
src/: cmd.rs  environment.rs  errors.rs  lib.rs  logging.rs  lua.rs  main.rs  rules.rs  stdout.rs  watcher.rs  watchers.rs  watches.rs  workers.rs  yaml.rs
tests/: cli.rs  command_init.rs  command_init_errors.rs  lua_based_filters.rs  main.rs  read_stdin_error.rs  tasks_that_run_on_init.rs  tasks_with_filepath_template.rs  using_filepath_templates_in_tasks.rs  watch_and_run_arbitrary_commands.rs  watch_in_non_block_mode.rs  watcher_does_not_die_with_failing_tasks.rs  watcher_reloads_config_file.rs  watching_arbitrary_files_running_arbitrary_commands.rs  watching_configured_errors.rs  watching_configured_rules.rs  watching_files_change_test.rs  watching_filtered_tasks_with_target_flag.rs  watching_nested_groups.rs  watching_with_fail_fast_flag.rs  watching_with_log_file.rs  watching_with_non_block_flag.rs  watching_with_verbose_flag.rs
(+43 files in other folders)
