[package]
name = "funzzy"
version = "1.0.1"
authors = ["Cristian Oliveira <me@cristianoliveira.com>"]
description = "Yet another fancy watcher inspired by entr."
license = "MIT"
repository = "https://github.com/cristianoliveira/funzzy"
edition = "2018"

[dependencies]
docopt = "1"
serde = "1.0" # if you're using `derive(Deserialize)`
serde_derive = "1.0" # if you're using `derive(Deserialize)`
notify = "4.0.0"
yaml-rust = "0.4.1"
glob="0.2.11"
notify-debouncer-mini = "0.3.0"
nix = "0.26.2"
#clippy = "*"
