[package]
name = "funzzy"
version = "1.6.0"
authors = ["Cristian Oliveira <me@cristianoliveira.com>"]
description = "A lightweight blazingly fast file watcher"
license = "MIT"
repository = "https://github.com/cristianoliveira/funzzy"
edition = "2021"
default-run = "funzzy" # the binary to run when `cargo run` is called

[profile.release]
lto = true # See https://doc.rust-lang.org/cargo/reference/profiles.html#lto

[features]
test-integration-e2e = ["test-integration-file-system", "test-integration"]
test-integration-file-system = []
test-integration = []

[dependencies]
docopt = "1.1.1"
serde = "1.0" # if you're using `derive(Deserialize)`
serde_derive = "1.0" # if you're using `derive(Deserialize)`
notify = "4.0.0"
yaml-rust = "0.4.5"
glob="^0.3"
notify-debouncer-mini = "0.3.0"
nix = "0.26.2"
once_cell = "1.19"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
pretty_assertions = "1.4.1"

[[bin]]
name = "funzzy"
path = "src/main.rs"

# alias
[[bin]]
name = "fzz"
path = "src/main.rs"

[target.armv7-unknown-linux-gnueabihf]
linker = "arm-none-linux-gnueabihf-gcc"
